--- a/galactic_react/src/Game.css
+++ b/galactic_react/src/Game.css
@@ -1,48 +1,3 @@
-button {
-  font-family: inherit;
-  font-size: 1em; 
-}
-
-.startButton {
-  background-color: #ffffff;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border: solid 5px black;
-  transition: border-width 0.6s linear;
-}
-
-.startButton:hover {
-  border-width: 10px;
-}
-
-
-
-.container {
-    width: 100%;
-}
-
-.arrow-up {
-    position: fixed;
-    left: 50%;
-    width: 0; 
-    height: 0; 
-    border-left: 1em solid transparent;
-    border-right: 1em solid transparent;
-    border-bottom: 1em solid white;
-}
-
-@font-face {
-    font-family: 'Baloo Bhai', cursive;
-    src: url('https://fonts.googleapis.com/css?family=Baloo+Bhai');
-  }
-
-
-
 canvas {
     color:#ffffff;
     display:block;
@@ -90,6 +45,58 @@ canvas {
   -webkit-animation:move-twink-back 200s linear infinite;
   animation:move-twink-back 200s linear infinite;
 }
+
+
+
+
+
+
+button {
+  font-family: inherit;
+  font-size: 1em; 
+}
+
+.startButton {
+  background-color: #ffffff;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border: solid 5px black;
+  transition: border-width 0.6s linear;
+}
+
+.startButton:hover {
+  border-width: 10px;
+}
+
+
+
+.container {
+    width: 100%;
+}
+
+.ship {
+    position: fixed;
+    left: 50%;
+    width: 0; 
+    height: 90%; 
+    border-left: 1em solid transparent;
+    border-right: 1em solid transparent;
+    border-bottom: 1em solid white;
+}
+
+@font-face {
+    font-family: 'Baloo Bhai', cursive;
+    src: url('https://fonts.googleapis.com/css?family=Baloo+Bhai');
+  }
+
+
+
+
   
   
  
