--- a/galactic_react/src/Game.css
+++ b/galactic_react/src/Game.css
@@ -44,6 +44,7 @@ canvas {
   -o-animation:move-twink-back 500s linear infinite;
   -webkit-animation:move-twink-back 500s linear infinite;
   animation:move-twink-back 500s linear infinite;
+  z-index:0;
 }
 
 
@@ -51,39 +52,16 @@ canvas {
 
 
 
-button {
-  font-family: inherit;
-  font-size: 1em; 
-}
-
-.startButton {
-  background-color: #ffffff;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border: solid 5px black;
-  transition: border-width 0.6s linear;
-}
-
-.startButton:hover {
-  border-width: 10px;
-}
 
 
 
-.container {
-    width: 100%;
-}
+
+
 
 .ship {
     position: absolute;
     left: 50%;
     top: 90%;
-    src: url("../src/assets/ship.png");
     z-index: 1;
 }
 
